improved response time by showing immediate results (with comments)

--- a/static/styles.css
+++ b/static/styles.css
@@ -54,6 +54,10 @@ h1{
     text-decoration-skip-ink: none;
 }
 
+a{
+    background-image: none !important;
+}
+
 a:hover{    
     text-decoration: underline wavy lightblue 2px !important;
 }
