changed the description

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <h1 class="centered">Wikipedia On This Day API</h1>
-      <h3 class="centered">Pulling interesting events happened on this day and month but in different years.</h3>        
+      <h3 class="centered">Pulling interesting events happened on this day and month</h3>        
       <p>Provides events that historically happened on the provided day and month. Supported types of events are:</p>
       <ul>
         <li>All: all of the following</li>
