wrapping the filter area

--- a/static/styles.css
+++ b/static/styles.css
@@ -36,7 +36,7 @@ header{
 #filter{
     display: flex;
     flex-direction: row;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     gap: 16px;    
 }
 #filter input{
@@ -75,7 +75,7 @@ a:visited{
 #yearLabel {    
     width: max-content;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     position: relative;
     cursor: pointer;    
     white-space: nowrap;
@@ -92,8 +92,7 @@ input[type=checkbox] {
 }
 
 /* Create a custom checkbox */
-.checkmark {
-    margin-left: 5%;
+.checkmark {    
     height: 25px;
     width: 25px;
     background-color: grey;
@@ -123,7 +122,7 @@ input[type=checkbox] {
 
 /* Style the checkmark/indicator */
 #yearLabel .checkmark::after {
-    margin: 5% 0 0 5%;
+    margin: 5% 0 0 10%;
     width: 5px;
     height: 10px;
     border: solid black;
