--- a/static/styles.css
+++ b/static/styles.css
@@ -1,83 +1,110 @@
-ul p span{ 
-    /* font-style: italic; */
-    /* text-decoration: underline; */
+@import url("paper.css");
+
+#head_title {
+    margin-bottom: 1% !important;
 }
 
+#dark-mode-toggler {
+    display: flex;
+    justify-content: flex-end;
+    padding-right: 7%;
+}
 
-body{
-    background-color: #181A1B;
-    color: #E8E6E3;
-    padding-left: 5%;    
+svg {
+    fill: var(--primary);
+}
+
+body {
+    background-color: var(--main-background);
+    color: var(--primary);
     padding-bottom: 10%;
 }
 
 #loader {
-    border: 8px solid darkgray; /* outer circle */
-    border-top: 8px solid lightgray; /* inner */
+    border: 10px solid var(--secondary);
+    /* outer circle */
+    border-top: 5px solid var(--primary);
+    /* inner */
     border-radius: 50%;
     width: 80px;
     height: 80px;
-    animation: spin 2s linear infinite;
+    animation: spin 0.5s linear infinite;
     align-content: auto;
-    margin: auto; /* For centering */
+    margin: auto;
+    /* For centering */
     padding-top: 2%;
     padding-bottom: 2%;
 }
 
-.centered{
-    text-align: center !important;    
+.text-center {
+    text-align: center !important;
 }
 
-header{
-    margin-top: none;
-    padding-top: 3%;    
+header {
+    margin: none;
+    padding-top: 3%;
 }
 
-#filter{
+#filter {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    gap: 16px;    
+    gap: 2%;
+    justify-content: center;
 }
-#filter input{
+
+#filter input {
     padding: auto;
 }
 
-h1{
-    text-decoration: underline wavy lightblue 4px;
+h1 {
+    text-decoration: underline wavy var(--secondary) 4px;
 }
 
-#js h4{
+header h3 {
+    text-decoration: underline wavy var(--secondary) 3px;
+}
+
+#js h4 {
     text-align: center;
     font-weight: bold;
-    text-decoration: underline wavy lightblue 2px;
+    text-decoration: underline wavy var(--secondary) 2px;
     text-decoration-skip-ink: none;
 }
 
-a{
+a {
     background-image: none !important;
 }
 
-a:hover{    
-    text-decoration: underline wavy lightblue 2px !important;
+a:hover {
+    text-decoration: underline wavy var(--secondary) 2px !important;
 }
 
-a:visited{
-    color: #cba194 !important;
+a:visited {
+    color: var(--muted) !important; /*#cba194*/
+}
+
+a:visited:hover{
+    text-decoration: underline wavy var(--muted) 2px !important;
 }
 
 @keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
 }
 
 /* Customize the label (the #yearLabel) */
-#yearLabel {    
+#yearLabel {
     width: max-content;
     display: flex;
     flex-direction: column;
     position: relative;
-    cursor: pointer;    
+    cursor: pointer;
     white-space: nowrap;
 
     -webkit-user-select: none;
@@ -92,20 +119,39 @@ input[type=checkbox] {
 }
 
 /* Create a custom checkbox */
-.checkmark {    
-    height: 25px;
-    width: 25px;
-    background-color: grey;
+.checkmark {
+    height: 100%;
+    width: 80%;
+    background-color: var(--danger);
+    border-color: #41403e;
+    border-color: var(--primary);
+    border-bottom-left-radius: 15px 255px;
+    border-bottom-right-radius: 225px 15px;
+    border-style: solid;
+    border-top-left-radius: 255px 15px;
+    border-top-right-radius: 15px 225px;
+    border-width: 2px;
+    display: block;
+    font-size: 1rem;
+    outline: none;
+    padding: 0.5rem;
 }
 
-/* On mouse-over, add a lightcyan background color */
-#yearLabel:hover input ~ .checkmark {
-    background-color: lightcyan;
+.checkmark:focus {
+    border-color: #41403e;
+    border-color: var(--secondary);
+    border-style: solid;
+    border-width: 2px;
 }
 
-/* When the checkbox is checked, add a lightblue background */
-#yearLabel input:checked ~ .checkmark {
-    background-color: lightblue;
+/* On mouse-over, add a background color */
+/* #yearLabel:hover input~.checkmark {
+    background-color: var(--warning);
+} */
+
+/* When the checkbox is checked, add a background */
+#yearLabel input:checked~.checkmark {
+    background-color: var(--success);
 }
 
 /* Create the checkmark/indicator (hidden when not checked) */
@@ -116,22 +162,44 @@ input[type=checkbox] {
 }
 
 /* Show the checkmark when checked */
-#yearLabel input:checked ~ .checkmark::after {
+/* #yearLabel input:checked ~ .checkmark::after {
     display: block;
-}
+} */
 
 /* Style the checkmark/indicator */
-#yearLabel .checkmark::after {
-    margin: 5% 0 0 10%;
-    width: 5px;
-    height: 10px;
-    border: solid black;
+/* #yearLabel .checkmark::after {
+    margin-left: 20%;
+    width: 12px;
+    height: 20px;
+    border: solid var(--success);
     border-width: 0 3px 3px 0;
     -webkit-transform: rotate(45deg);
     -ms-transform: rotate(45deg);
     transform: rotate(45deg);
-} 
+}  */
 
-input[type=number]{
+input[type=number] {
     width: 70px;
+}
+
+#noteText {
+    text-decoration: underline wavy var(--secondary) 2px;
+}
+
+.center {
+    margin: 2% 5%;
+}
+
+.center li {
+    margin: 1% 0;
+}
+
+ol li{
+    font-weight: bold;   
+    /* text-decoration: underline var(--secondary) 2px;  */
+}
+
+label button{
+    margin-top: 20%;
+    text-decoration: underline wavy var(--secondary) 1.5px;
 }
